# watcher-localization-mapping

./: .gitignore  README.md  docker-compose.yml  dockerfile  run.sh
recordings/: README.md
src/wheelchair_slam/: CMakeLists.txt  package.xml
src/wheelchair_slam/config/: camera_params.yaml  ekf_params.yaml  rtabmap_params.yaml  scan_params.yaml  zed_override.yaml
src/wheelchair_slam/launch/: odometry_fusion.launch.py  pointcloud_merge.launch.py  robot_description.launch.py  rtabmap.launch.py  slam_full.launch.py  zed_cameras.launch.py
src/wheelchair_slam/rviz/: slam_debug.rviz
src/wheelchair_slam/urdf/: cameras.urdf.xacro  wheelchair_base.urdf.xacro
src/wheelchair_slam/wheelchair_slam/: pointcloud_merger.py
